--- a/styles.css
+++ b/styles.css
@@ -341,7 +341,7 @@ section {
   z-index: 1;
 
   font-family: 'Castoro', serif;
-  font-weight: 400;
+  font-weight: 100;
   font-size: 20px;
   line-height: normal;
 
@@ -396,8 +396,6 @@ section {
 
 .sabor-card__title {
   margin-top: 128px;
-  font-family: 'Castoro', serif;
-  font-size: 20px;
   line-height: normal;
   transition: transform 0.35s ease;
 }
@@ -406,21 +404,16 @@ section {
   margin-top: 0px;
   opacity: 0;
   transform: translateY(210px);
-
-  font-family: 'Castoro', serif;
-  font-size: 20px;
-
   transition: transform 0.3s ease;
 }
 
-.sabor-card__badge {
+.sabor-card .sabor-card__badge {
   margin-top: 0px;
   opacity: 0;
   transform: translateY(210px);
-
-  font-family: 'Archivo';
+  font-family: 'Archivo', sans-serif;
+  font-weight: 500;
   font-size: 12px;
-
   transition: transform 0.3s ease;
 }
 
@@ -452,7 +445,7 @@ section {
 
 .sabor-card:hover .sabor-card__badge {
   opacity: 1;
-  transform: translateY(100px);
+  transform: translateY(110px);
 }
 
 .sabor-card:hover .sabor-card__texture {
@@ -461,6 +454,14 @@ section {
 
 .sabor-card:hover .sabor-card__extra {
   opacity: 1;
+}
+
+.sabor-card--chocolate .sabor-card__text {
+  color: #fffffa; /* o el color que necesites */
+}
+
+.sabor-card--chocolate .sabor-card__badge {
+  color: #fffffa;
 }
 
 
