--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,6 @@ body {
   height: 120px;
   margin: 0 auto;
   padding: 0 324px;
-
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -449,6 +448,7 @@ body {
   grid-template-columns: 810px 1fr;
   align-items: center;
   min-height: auto; /* importante */
+  padding: 60px 0;
 }
 
 .pedidos__image img {
@@ -480,6 +480,38 @@ body {
   line-height: 22px;
   margin: 0;
 }
+
+.pedidos__steps {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
+.step {
+  display: flex;
+  align-items: center;
+  width: 486px;
+  gap: 24px;
+}
+
+.step__text {
+  flex: 1;
+  text-align: left;
+  font-family: 'Archivo';
+  font-size: 16px;
+  line-height: 22px;
+}
+
+.step__number {
+  width: 78px;
+  text-align: center;
+  font-family: 'Castoro';
+  font-style: italic;
+  font-size: 68px;
+  line-height: 1;
+}
+
+
 
 
 
