--- a/styles.css
+++ b/styles.css
@@ -560,6 +560,51 @@ body {
   height: auto;
 }
 
+.footer {
+  position: relative;
+  width: 100%;
+  height: 160px;
+  overflow: hidden;
+  padding: 60px 0;
+}
+
+.footer__bg {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+}
+
+.footer__content {
+  position: relative;
+  z-index: 1;
+
+  max-width: 1440px;
+  height: 100%;
+
+  margin: 0 auto;
+  padding: 0 120px;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.footer__info {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  font-family: 'Archivo';
+  font-size: 16px;
+  line-height: 22px;
+  color: #fff;
+}
+
+
+
+
+
 
 
 
