--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,6 @@ body {
 }
 
 .section--full {
-  min-height: 100vh;
   padding-top: 120px;
 }
 
@@ -600,6 +599,37 @@ body {
   line-height: 22px;
   color: #fff;
 }
+
+.fab-whatsapp {
+  position: fixed;
+  right: 120px;
+  top: 670px;
+
+  width: 78px;
+  height: 78px;
+}
+
+.fab-whatsapp__icon {
+  pointer-events: none;
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  transition: opacity 0.1s ease;
+}
+
+.fab-whatsapp__icon--hover {
+  opacity: 0;
+}
+
+.fab-whatsapp:hover .fab-whatsapp__icon--default {
+  opacity: 0;
+}
+
+.fab-whatsapp:hover .fab-whatsapp__icon--hover {
+  opacity: 1;
+}
+
 
 
 
