--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ html {
 
 body {
   font-family: 'Archivo', sans-serif;
-  background-color: #fffdf7;
+  background-color: #fffffa;
   color: #000;
 }
 
@@ -20,7 +20,7 @@ body {
   position: fixed;
   top: 0;
   width: 100%;
-  background-color: #fffdf7;
+  background-color: #fffffa;
   z-index: 100;
 }
 
@@ -113,6 +113,7 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  pointer-events: none;
 }
 
 /* AUTO LAYOUT PADRE */
@@ -307,7 +308,6 @@ body {
 .sabor-card__bg {
   position: absolute;
   inset: 0;
-
   width: 100%;
   height: 100%;
   object-fit: contain;
@@ -316,12 +316,10 @@ body {
 .sabor-card p {
   position: relative;
   z-index: 1;
-
   font-family: 'Castoro', serif;
   font-weight: 100;
   font-size: 20px;
   line-height: normal;
-
   color: #000;
   text-align: center;
 }
@@ -442,11 +440,20 @@ body {
 }
 
 .pedidos {
-  display: grid;
+  display: flex;
+  justify-content: center;
   grid-template-columns: 810px 1fr;
   align-items: center;
   min-height: auto; /* importante */
-  padding: 60px 0;
+  padding: 120px 0;
+}
+
+.pedidos__inner {
+  width: 100%;
+  max-width: 1440px;
+  display: flex;
+  align-items: center;
+  gap: 120px;
 }
 
 .pedidos__image img {
@@ -577,13 +584,10 @@ body {
 .footer__content {
   position: relative;
   z-index: 1;
-
   max-width: 1440px;
   height: 100%;
-
   margin: 0 auto;
   padding: 0 120px;
-
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -596,16 +600,16 @@ body {
   font-family: 'Archivo';
   font-size: 16px;
   line-height: 22px;
-  color: #fff;
+  color: #fffffa;
 }
 
 .fab-whatsapp {
   position: fixed;
   right: 120px;
   top: 670px;
-
   width: 78px;
   height: 78px;
+  z-index: 9999;
 }
 
 .fab-whatsapp__icon {
@@ -628,16 +632,3 @@ body {
 .fab-whatsapp:hover .fab-whatsapp__icon--hover {
   opacity: 1;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
